# catlas

./: .gitignore  Cargo.toml  blocks.rs  build.rs
assets/: basecolorid_map.csv
chunks/: r.0.0.maple.mca
chunks/region/: r.-2.0.mca  r.1.0.mca
crates/catlas-colors/: Cargo.toml  blocks.rs  build.rs  map_color.rs
crates/catlas-colors/src/: base_color.rs  base_color_id_map.rs  base_color_type.rs  block_color.rs  lib.rs  map_color.rs
crates/catlas-models/: Cargo.toml
crates/catlas-models/src/: chunk.rs  lib.rs  palette.rs  section_editor.rs
crates/catlas-models/src/chunk/: block_state.rs  section.rs
crates/catlas-reader/: Cargo.toml
crates/catlas-reader/src/: chunk_reader.rs  lib.rs  section_reader.rs  y_pos.rs
crates/catlas-reader/src/section_reader/: block_states_reader.rs
crates/catlas-reader/src/section_reader/block_states_reader/: full_block_states_reader.rs
crates/catlas-renderer/: Cargo.toml
crates/catlas-renderer/src/: error.rs  lib.rs  render.rs  render_pre_tile.rs  render_tile.rs
examples/: render_one_chunk.rs  test.rs
src/: color_map.rs  lib.rs  main.rs  manager.rs  map_color.rs  models.rs  reader.rs  renderer.rs
src/color_map/: base_color.rs  base_color_map.rs  map_color.rs
src/manager/: chunk_manager.rs  error.rs  region_manager.rs  section_manager.rs
src/map_color/: base_color_id_map.rs  block_attributes.rs
src/models/: chunk.rs  palette.rs  paletted_block.rs
src/models/chunk/: block_state.rs  section.rs
src/reader/: section_reader.rs
src/reader/section_reader/: block_states_reader.rs
src/reader/section_reader/block_states_reader/: full_block_states_reader.rs
