[package]
name = "catlas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastanvil = { version = "0.30.0", features = ["render"]}
fastnbt = "2.4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
phf = { version = "0.11.1" }
bitflags = "2.4.2"
rustc-hash = "1.1.0"

[build-dependencies]
csv = "1.3.0"
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
phf = { version = "0.11.1", default-features = false }
phf_codegen = "0.11.1"
rustc-hash = "1.1.0"
bitflags = "2.4.2"
thiserror = "1.0.50"
