[package]
name = "catlas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
phf = { version = "0.11.1" }
rustc-hash = "1.1.0"
bitflags = "2.4.2"
num-traits = "0.2"
num-derive = "0.4.2"

[dependencies]
fastanvil = { version = "0.30.0", features = ["render"]}
fastnbt = "2.4.4"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
phf.workspace = true
bitflags.workspace = true
rustc-hash.workspace = true
num-traits.workspace = true
num-derive.workspace = true
image = "0.25.1"

[build-dependencies]
csv = "1.3.0"
regex = "1.10.3"
serde.workspace = true
serde_json.workspace = true
phf.workspace = true
phf_codegen = "0.11.1"
rustc-hash.workspace = true
bitflags.workspace = true
thiserror.workspace = true
num-traits.workspace = true
num-derive.workspace = true
