[package]
name = "catlas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]
exclude = []
resolver = "2"

[workspace.dependencies]
fastanvil = { version = "0.30.0", features = ["render"]}
fastnbt = "2.4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
phf = { version = "0.11.1" }
image = "0.25.1"
rustc-hash = "1.1.0"
bitflags = "2.4.2"
num-traits = "0.2"
num-derive = "0.4.2"

## catlas
catlas-colors = { path = "crates/catlas-colors" }
catlas-models = { path = "crates/catlas-models" }
catlas-reader = { path = "crates/catlas-reader" }
catlas-renderer = { path = "crates/catlas-renderer" }

[dependencies]
fastanvil.workspace = true
fastnbt.workspace = true
thiserror.workspace = true
phf.workspace = true
bitflags.workspace = true
rustc-hash.workspace = true
image.workspace = true
catlas-colors.workspace = true
catlas-models.workspace = true
catlas-reader.workspace = true
catlas-renderer.workspace = true
