[package]
name = "catlas-colors"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits.workspace = true
num-derive.workspace = true
bitflags.workspace = true
phf.workspace = true

[build-dependencies]
csv = "1.3.0"
regex = "1.10.3"
serde.workspace = true
serde_json.workspace = true
phf.workspace = true
phf_codegen = "0.11.1"
rustc-hash.workspace = true
bitflags.workspace = true
thiserror.workspace = true
num-traits.workspace = true
num-derive.workspace = true
